--- a/TestApplication/app/src/main/res/values/strings.xml
+++ b/TestApplication/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="app_name">Test Application</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="shuffle">Shuffle</string>
+    <string name="general_settings">Settings</string>
+    <string name="song_list">Song List</string>
 
 </resources>
