--- a/TestApplication/app/src/main/res/values/strings.xml
+++ b/TestApplication/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">Test Application</string>
     <string name="hello_world">Hello world!</string>
     <string name="shuffle">Shuffle</string>
-    <string name="general_settings">Settings</string>
+    <string name="end_play">End</string>
     <string name="song_list">Song List</string>
 
 </resources>
